--- a/P004603.opf/meta.yml
+++ b/P004603.opf/meta.yml
@@ -1,8 +1,8 @@
-id: opecha:P004603
+id: P004603
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W1KG8833
   title: མངོན་པ་མཛོད་ཀྱི་དགོངས་དོན་གསལ་བྱེད་ལེགས་བཤད་ཉིན་བྱེད་དབང་པོའི་སྣང་བ་དང་།
     མཛོད་སྡོམ་བཅས།
-  volume: ''
   author: ''
+  volumes: {}
