volumes of meta updated

--- a/P004603.opf/meta.yml
+++ b/P004603.opf/meta.yml
@@ -5,4 +5,9 @@ source_metadata:
   title: མངོན་པ་མཛོད་ཀྱི་དགོངས་དོན་གསལ་བྱེད་ལེགས་བཤད་ཉིན་བྱེད་དབང་པོའི་སྣང་བ་དང་།
     མཛོད་སྡོམ་བཅས།
   author: ''
-  volumes: {}
+  volumes:
+    4acabf13e2ea4acab915411e811f7ef4:
+      image_group_id: I1KG8875
+      title: ''
+      volume_number: 1
+      total_pages: 726
