--- a/P004603.opf/layers/v001/Pagination.yml
+++ b/P004603.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 064a1c7586d147fe8575080ecc3297c3
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   149ac55d2c5142bfb57c9125e125d06e:
